[gd_scene format=3 uid="uid://y2hgrucsa7i7"]

[ext_resource type="Script" path="res://scripts/shader_terrain_generator.gd" id="1_shader"]

[node name="ShaderLocation" type="Node2D"]
script = ExtResource("1_shader")

[node name="TerrainMesh" type="MeshInstance2D" parent="."]
z_index = -1

[node name="ResourceLayer" type="TileMapLayer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="InfoLabel" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 500.0
offset_bottom = 160.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
text = "Shader Terrain Generator
WASD/Arrows - Move Camera
Q/E - Zoom In/Out
Loading..."

[node name="ControlsLabel" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 950.0
offset_right = 500.0
offset_bottom = 1050.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
text = "Shader-Based Terrain Blending
Smooth transitions between elevation levels
Press 1-9 to load different locations"
